istio-teaching/destinationrules/trafficPolicy/portLevelSettings/loadBalancer/localityLbSetting/dr-productpage-distribute.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: productpage
spec:
  host: productpage.istio.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 9080
      loadBalancer:
        localityLbSetting:
          enabled: true
          distribute:
          - from: "us-central1/*"
            to:
              #"us-central1/*": 80
              "us-central2/*": 100
