istio-teaching/destinationrules/trafficPolicy/portLevelSettings/loadBalancer/localityLbSetting/dr-productpage-failover.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: productpage
spec:
  host: productpage.istio.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 9080
      loadBalancer:
        localityLbSetting:
          enabled: true
          failover:
          - from: us-central1
            to: us-central2
          - from: us-central1
            to: us-central2
      outlierDetection:
        consecutiveErrors: 7
        interval: 5m
        baseEjectionTime: 15m
